--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "CursoOpenWebinars": {
+    "cursoIniciacionAngular8": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,18 +17,17 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/CursoOpenWebinars",
+            "outputPath": "dist/cursoIniciacionAngular8",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "aot": true,
+            "aot": false,
             "assets": [
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -46,6 +45,7 @@
               "sourceMap": false,
               "extractCss": true,
               "namedChunks": false,
+              "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
@@ -54,11 +54,6 @@
                   "type": "initial",
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kb",
-                  "maximumError": "10kb"
                 }
               ]
             }
@@ -67,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "CursoOpenWebinars:build"
+            "browserTarget": "cursoIniciacionAngular8:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "CursoOpenWebinars:build:production"
+              "browserTarget": "cursoIniciacionAngular8:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "CursoOpenWebinars:build"
+            "browserTarget": "cursoIniciacionAngular8:build"
           }
         },
         "test": {
@@ -93,7 +88,6 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -116,16 +110,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "CursoOpenWebinars:serve"
+            "devServerTarget": "cursoIniciacionAngular8:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "CursoOpenWebinars:serve:production"
+              "devServerTarget": "cursoIniciacionAngular8:serve:production"
             }
           }
         }
       }
-    }
-  },
-  "defaultProject": "CursoOpenWebinars"
+    }},
+  "defaultProject": "cursoIniciacionAngular8"
 }
